// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`movingBallsActions Dispatches the correct action and payload (changeDirectionOfXMove) 1`] = `
Array [
  Object {
    "id": 7,
    "type": "CHANGE_DIRECTION_OF_X_MOVE",
  },
]
`;

exports[`movingBallsActions Dispatches the correct action and payload (changeDirectionOfYMove) 1`] = `
Array [
  Object {
    "id": 3,
    "type": "CHANGE_DIRECTION_OF_Y_MOVE",
  },
]
`;

exports[`movingBallsActions Dispatches the correct action and payload (fillCirclesArray) 1`] = `
Array [
  Object {
    "type": "FILL_CIRCLES_ARRAY",
  },
]
`;

exports[`movingBallsActions Dispatches the correct action and payload (getNumbersOfBalls) 1`] = `
Array [
  Object {
    "num": 57,
    "type": "GET_NUMBERS_OF_BALLS",
  },
]
`;

exports[`movingBallsActions Dispatches the correct action and payload (moveCircleXCoordinate) 1`] = `
Array [
  Object {
    "dx": 467,
    "id": 3,
    "type": "MOVE_CIRCLE_X_COORDINATE",
  },
]
`;

exports[`movingBallsActions Dispatches the correct action and payload (moveCircleYCoordinate) 1`] = `
Array [
  Object {
    "dy": 342,
    "id": 2,
    "type": "MOVE_CIRCLE_Y_COORDINATE",
  },
]
`;

exports[`movingBallsActions Dispatches the correct action and payload (updateCirclesArray) 1`] = `
Array [
  Object {
    "arr": Array [
      Object {
        "a": 6,
      },
      Object {
        "b": 9,
      },
    ],
    "type": "UPDATE_CIRCLES_ARRAY",
  },
]
`;

exports[`movingBallsActions Dispatches the correct action and payload (updateCoordinates) 1`] = `
Array [
  Object {
    "type": "UPDATE_COORDINATES",
    "x": 36,
    "y": 67,
  },
]
`;

exports[`movingBallsActions Dispatches the correct action and payload (updateVelocities) 1`] = `
Array [
  Object {
    "dx": 3,
    "dy": 6,
    "type": "UPDATE_VELOCITIES",
  },
]
`;
